# news-extractor

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  entity-linking.md  relation-extraction.md
